fixed for Window can be shrunk (or just started too small) to see the quick "up" arrow scroll button

--- a/Chalkable.Web/assets/sass/partials/controls/_grid.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_grid.scss
@@ -118,8 +118,8 @@ BODY {
   .back-top{
     width: 72px;
     height: 72px;
-    left: 1175px;
-    top: 511px;
+    right: 30px;
+    bottom: 100px;
 
     .back-top-arrow{
       display: inline-block;
